# PriceHunt-MCP

./: README.md  pyproject.toml  requirements.txt
project/: app.py  mcp_client.py  mcp_server.py
