[project]
name = "test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "langchain>=0.3.27",
    "langchain-core>=0.3.72",
    "langchain-google-genai>=2.1.8",
    "mcp-use>=1.3.7",
    "mcp[cli]>=1.12.2",
    "selenium>=4.34.2",
    "streamlit>=1.47.1",
    "webdriver-manager>=4.0.2",
]
